ADD skeleton for filter navbar and resultfound card

--- a/index.html
+++ b/index.html
@@ -159,9 +159,125 @@
           <span class="circle red"></span>
         </div>
 
-        <div class="search-navbar"></div>
+      </div>
+
+      <div class="col-md-12 col-xs-12 mt--80-imp">
+        <div class="filter-navbar fx fx--ai-c fx--jc-sb">
+          <div class="left fx fx--ai-c">
+            <div class="result-text">12 results <span class="gray-text">Found</span></div>
+            <div class="info-sec">
+              <i class="ion-ios-flame"></i>
+              <span class="info-text">22 views on this search today</span>
+            </div>
+          </div>
+          <div class="right fx fx--ai-c">
+            <div class="form-group">
+              <label class="filter-heading">Filter by</label>
+              <div class="toggle">
+                <span class="">Direct Route</span>
+                <label class="switch">
+                  <input type="checkbox" checked>
+                  <span class="slider round"></span>
+                </label>
+            </div>               
+            </div>
+            <div class="form-group">
+              <label class="filter-heading">Select liner</label>
+              <select class="form-control filter-select">
+                <option value="Shipments" selected>Shipments</option>
+                <option value="Shipments">Shipments</option>
+                <option value="Shipments">Shipments</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label class="filter-heading">Sort by</label>
+              <select class="form-control filter-select">
+                <option value="Shipments" selected>Shipments</option>
+                <option value="Shipments">Shipments</option>
+                <option value="Shipments">Shipments</option>
+              </select>
+            </div>
+            <div class="list-view vertical">
+              <i class="ion-ios-list"></i>
+            </div>
+            <div class="list-view horizontal">
+              <i class="ion-ios-list"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-12 col-xs-12">
+
+        <h1 class="badge-seller"> Best Seller</h1>
+
+        <div class="card card-result-found d-flex fx--ai-c fx--jc-sb">
+          <div class="card-header">
+            <div class="img-logo" style="background-image: url('assets/images/logo.svg')"></div>
+          </div>
+          <div class="card-body">
+            <p class="heading">Cost includes</p>
+            <ul class="charges-list">
+              <li class="charges-list-item">
+                <span><i class="ion-ios-checkmark"></i></span>
+                <span class="text">
+                  <span class="name">Origin charges</span>
+                  <span class="amount">$20</span>
+                </span>
+              </li>
+              <li class="charges-list-item">
+                <span><i class="ion-ios-checkmark"></i></span>
+                <span class="text">
+                  <span class="name">Origin charges</span>
+                  <span class="amount">$20</span>
+                </span>
+              </li>
+              <li class="charges-list-item">
+                <span><i class="ion-ios-checkmark"></i></span>
+                <span class="text">
+                  <span class="name">Origin charges</span>
+                  <span class="amount">$20</span>
+                </span>
+              </li>
+              <li class="charges-list-item">
+                <span><i class="ion-ios-checkmark"></i></span>
+                <span class="text">
+                  <span class="name">Origin charges</span>
+                  <span class="amount">$20</span>
+                </span>
+              </li>
+            </ul>
+            <ul class="footer-info-list">
+              <li class="footer-info-list-item">
+                <span class="gray-text">Service Type</span>
+                <span class="black-text">BTL Tuticorin Service</span>
+                <span class="gray-text">via Type</span>
+                <span class="black-text">Port of Colombo</span>
+                <span class="gray-text">Transit time</span>
+                <span class="black-text">29 days</span>
+                <span class="gray-text">Next Sailing on</span>
+                <span class="black-text">7 Apr 2019</span>
+              </li>
+            </ul>
+          </div>
+          <div class="card-footer">
+            <i class="ion-md-share icon-share"></i>
+            <div class="price-sec">
+              <p class="price">INR <span class="num"> 11298</span></p> 
+              <p class="price with-cut">INR <span class="num"> 12234</span></p> 
+            </div>
+            <a href="javascript:void(0);" class="blue-text">
+              View breakdown
+            </a>
+            <div class="action-footer">
+              <p class="expiry-text">Expires in <span class="danger-text">12 Days</span></p>
+              <button type="button" class="btn btn-success btn-book">Book now <span><i class="ion-ios-arrow-round-forward icon-arrow"></i></span></button>
+            </div>
+          </div>
+        </div>
 
       </div>
+
     </div>
   </div>
 
