ADD filter navabr ui

--- a/index.html
+++ b/index.html
@@ -162,40 +162,42 @@
       </div>
 
       <div class="col-md-12 col-xs-12 mt--80-imp">
-        <div class="filter-navbar fx fx--ai-c fx--jc-sb">
-          <div class="left fx fx--ai-c">
-            <div class="result-text">12 results <span class="gray-text">Found</span></div>
+        <div class="filter-navbar">
+          <div class="left">
+            <div class="result-text">12 Results <span class="gray-text">Found</span></div>
             <div class="info-sec">
               <i class="ion-ios-flame"></i>
               <span class="info-text">22 views on this search today</span>
             </div>
           </div>
-          <div class="right fx fx--ai-c">
+          <div class="right">
             <div class="form-group">
               <label class="filter-heading">Filter by</label>
               <div class="toggle">
-                <span class="">Direct Route</span>
+                <span class="toggle-text">Direct Route</span>
                 <label class="switch">
                   <input type="checkbox" checked>
                   <span class="slider round"></span>
                 </label>
             </div>               
             </div>
-            <div class="form-group">
-              <label class="filter-heading">Select liner</label>
-              <select class="form-control filter-select">
-                <option value="Shipments" selected>Shipments</option>
-                <option value="Shipments">Shipments</option>
-                <option value="Shipments">Shipments</option>
+            <div class="form-group ml--10-imp">
+              <label class="filter-heading pl--8-imp">Select liner</label>
+              <select class="form-control filter-select liner">
+                <option value="Shipments" selected>Maersk, Happag Lloyd Enterprise</option>
+                <option value="Shipments">Maersk, Happag Lloyd Enterprise</option>
+                <option value="Shipments">Maersk, Happag Lloyd Enterprise</option>
               </select>
             </div>
             <div class="form-group">
-              <label class="filter-heading">Sort by</label>
-              <select class="form-control filter-select">
-                <option value="Shipments" selected>Shipments</option>
-                <option value="Shipments">Shipments</option>
-                <option value="Shipments">Shipments</option>
-              </select>
+              <label class="filter-heading dark-text pl--8-imp">Sort by</label>
+              <div class="with-border">
+                <select class="form-control filter-select">
+                  <option value="Shipments" selected>Price</option>
+                  <option value="Shipments">Date</option>
+                  <option value="Shipments">Time</option>
+                </select>
+              </div>
             </div>
             <div class="list-view vertical">
               <i class="ion-ios-list"></i>
@@ -211,7 +213,7 @@
 
         <h1 class="badge-seller"> Best Seller</h1>
 
-        <div class="card card-result-found d-flex fx--ai-c fx--jc-sb">
+        <div class="card card-result-found d-flex fx--ai-c fx--jc-sb fx--d-r">
           <div class="card-header">
             <div class="img-logo" style="background-image: url('assets/images/logo.svg')"></div>
           </div>
