ADD card basic ui and responsive view

--- a/index.html
+++ b/index.html
@@ -171,40 +171,44 @@
             </div>
           </div>
           <div class="right">
-            <div class="form-group">
-              <label class="filter-heading">Filter by</label>
-              <div class="toggle">
-                <span class="toggle-text">Direct Route</span>
-                <label class="switch">
-                  <input type="checkbox" checked>
-                  <span class="slider round"></span>
-                </label>
-            </div>               
-            </div>
-            <div class="form-group ml--10-imp">
-              <label class="filter-heading pl--8-imp">Select liner</label>
-              <select class="form-control filter-select liner">
-                <option value="Shipments" selected>Maersk, Happag Lloyd Enterprise</option>
-                <option value="Shipments">Maersk, Happag Lloyd Enterprise</option>
-                <option value="Shipments">Maersk, Happag Lloyd Enterprise</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label class="filter-heading dark-text pl--8-imp">Sort by</label>
-              <div class="with-border">
-                <select class="form-control filter-select">
-                  <option value="Shipments" selected>Price</option>
-                  <option value="Shipments">Date</option>
-                  <option value="Shipments">Time</option>
+            <div class="left-sec">
+              <div class="form-group">
+                <label class="filter-heading">Filter by</label>
+                <div class="toggle">
+                  <span class="toggle-text">Direct Route</span>
+                  <label class="switch">
+                    <input type="checkbox" checked>
+                    <span class="slider round"></span>
+                  </label>
+              </div>               
+              </div>
+              <div class="form-group ml--10-imp">
+                <label class="filter-heading pl--mob">Select liner</label>
+                <select class="form-control filter-select liner">
+                  <option value="Shipments" selected>Maersk, Happag Lloyd Enterprise</option>
+                  <option value="Shipments">Maersk, Happag Lloyd Enterprise</option>
+                  <option value="Shipments">Maersk, Happag Lloyd Enterprise</option>
                 </select>
               </div>
             </div>
-            <div class="list-view vertical">
-              <i class="ion-ios-list"></i>
-            </div>
-            <div class="list-view horizontal">
-              <i class="ion-ios-list"></i>
-            </div>
+            <div class="right-sec">
+              <div class="form-group">
+                <label class="filter-heading dark-text pl--mob">Sort by</label>
+                <div class="with-border">
+                  <select class="form-control filter-select">
+                    <option value="Shipments" selected>Price</option>
+                    <option value="Shipments">Date</option>
+                    <option value="Shipments">Time</option>
+                  </select>
+                </div>
+              </div>
+              <div class="list-view vertical">
+                <i class="ion-ios-list"></i>
+              </div>
+              <div class="list-view horizontal">
+                <i class="ion-ios-list"></i>
+              </div>
+          </div>
           </div>
         </div>
       </div>
